CAPI-217(fix): overlay jumps on video stream start
wip

--- a/src/screens/videoStream/index.module.css
+++ b/src/screens/videoStream/index.module.css
@@ -5,3 +5,12 @@
 	display: flex;
 	flex-direction: column;
 }
+
+@media (orientation: landscape) {
+	.videoWrapper {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+}
