--- a/src/screens/videoStream/overlay/index.module.css
+++ b/src/screens/videoStream/overlay/index.module.css
@@ -1,10 +1,9 @@
 .overlayWrapper {
-  visibility: hidden;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: calc(100vw * 4 / 3);
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -37,6 +36,7 @@
 			transparent min(248px, 41vh),
 			rgba(0, 0, 0, 0.9) min(248px, 41vh)
 		);
+		height: 100%;
 	}
 	.imageWrapper {
 		position: absolute;
